WarmUp_07_html -Added code to better support "blank_item" -Adding pngs

--- a/WarmUp_07_html/styles/WarmUp_07.css
+++ b/WarmUp_07_html/styles/WarmUp_07.css
@@ -372,3 +372,8 @@ body[mode='warmup_08'][intro='true'] #main #idLeftCol > * ,
 body[mode='warmup_08a'][intro='true'] #main #idLeftCol > * {
 	display: none;
 }
+
+body[item_blank="true"] #idExampleContainers,
+body[item_blank="true"] #idLeftCol{
+	display: none;
+}
