--- a/Enabling_32_html/css/enabling_32_default.css
+++ b/Enabling_32_html/css/enabling_32_default.css
@@ -33,7 +33,7 @@ body {
 	margin:0px;
 	padding:0px;
 	height:515px;
-	width:890px; 
+	width:835px;
 	background-color:#f5f5f5;
 	-webkit-border-radius:3px;
 	-moz-border-radius:3px;
@@ -106,15 +106,19 @@ position:relative;
 	background-color: lightGrey;
 }
 
-#feedback {
+
+
+
+#feedback_32 {
+  
     max-height: 150px;
     min-height: 150px;
     padding: 15px;
     position: absolute;
-    top: 90px;
-	left:545px;
+    top: 75px;
+    left:505px;
     width: 320px;
-	height:80px;
+    height:80px;
     z-index: 150;
 	margin:0;
 	background: #ffffff; /* Old browsers */
@@ -125,6 +129,11 @@ position:relative;
 	background: -ms-linear-gradient(top,  #ffffff 0%,#e6e6e6 100%); /* IE10+ */
 	background: linear-gradient(to bottom,  #ffffff 0%,#e6e6e6 100%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e6e6e6',GradientType=0 ); /* IE6-9 */
+
+
+    border: thin solid #bdbdbd;
+    border-radius: 3px;
+    box-shadow: 0 2px 4px #bdbdbd;
 
 }
 
@@ -155,7 +164,7 @@ position:relative;
     background-color: grey;
     left: 2px;
 	top: 0px;
-    width: 320px;
+    width: 318px;
     height: 240px;
     margin: 10px;
 	text-align:center;
@@ -167,7 +176,8 @@ position:relative;
 	-moz-border-radius:3px;
 	border-radius:3px;
 	 width: 320px;
-    height: 240px;
+    height: 240px;    
+    margin: 10px 0px 10px -1px !important;
 }
 #flashPlayer {
 	display:none;
@@ -178,11 +188,11 @@ position:relative;
     height: 240px;
 }
 #wordContainer{
-	position:relative;
-	top: -250px;
+	position:absolute;
+	top: -10px;
 	left: 332px;
-    height: 240px;
-	width: 534px;
+        height: 240px;
+	width: 495px;
 	margin: 10px;
     
 		border: solid thin #b8b8b8 !important;
@@ -203,10 +213,11 @@ background: #fcfcfc !important; /* Old browsers */
 }
 
 #dragBubbleBG{
-	position:relative;
-	top: -250px;
+	position:absolute;
+	/*top: -250px;*/
+	top:255px;
 	left: 10px;
-	width: 865px;
+	width: 826px;
 	border: solid thin #b8b8b8 !important;
 	-webkit-border-radius:3px;
 	-moz-border-radius:3px;
@@ -227,7 +238,7 @@ background: #fcfcfc !important; /* Old browsers */
 	position:relative;
 	top: 10px;
 	left: 10px;
-	width: 840px;
+	width: 805px;
 	font-size:24px;
 	padding:13px 0px 0px 10px;
 	margin:0px;
@@ -255,7 +266,7 @@ background: #fcfcfc !important; /* Old browsers */
 	position:relative;
 	top: 15px;
 	left: 8px;
-	width: 840px;
+	width: 805px;
 	padding:0px;
 	margin:0px;
 	
@@ -325,11 +336,23 @@ background: #fcfcfc !important; /* Old browsers */
 
 #container_setDiv{
     height: 40px;
-    position: relative;
-    top: -240px;
+    position: absolute;
+    top: 390px;
 	left:0px;
-    width: 875px;
-	
+    width: 825px;
+    background-color: transparent;
+
+}
+
+#setDiv {
+    background-color: white;
+    cursor: default;
+    height: 30px;
+    left: 0;
+    position: relative;
+    top: 0px;
+    width: 40px;
+    z-index: 5;
 }
 #setButtons{
 	font-family: 'FuturaMedium';
