--- a/WarmUp_07_html/styles/WarmUp_07.css
+++ b/WarmUp_07_html/styles/WarmUp_07.css
@@ -207,7 +207,7 @@ body[mode="warmup_08a"] #idDesc{
     border-radius: 3px 3px 3px 3px;
     box-shadow: 0 2px 4px #BDBDBD;
 
-    padding: 10px;
+    padding: 10px 5px 10px 10px;
     height: 344px;
     overflow: auto;
     direction: ltr;
