--- a/DragDrop_html/styles/dragdrop_dlilearn.css
+++ b/DragDrop_html/styles/dragdrop_dlilearn.css
@@ -119,7 +119,7 @@ html body {
     background-color: #F5F5F5;
     color: #444444;
     font-family: Arial,Helvetica,sans-serif;
-    letter-spacing: 2px;
+    letter-spacing: 0px;
    /* line-height: 20px;*/
     position: absolute;
 }
@@ -162,10 +162,11 @@ html body {
     margin-left: -8px;
 }
 #feedbackText {
-    margin-top: -8px;
+    margin-top: -12px;
     margin-left: -8px;
     margin-right:-8px;
-    height: 35px;
+    font-size: 12px;
+    height: 42px;
 }
 #feedbackBtn {
     bottom: 11px;
